Enable source deployment.